--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -15,7 +15,7 @@
 
 
 <script src="common.js"></script>
-<script src="index.js"></script>
+<script src="../src/index.js"></script>
 <script>/*Fixing iframe window.innerHeight 0 issue in Safari*/document.body.clientHeight;</script>
 <script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.g2-3.2.8-beta.5/dist/g2.min.js"></script>
 
